# PythonicDataClasses

./: 404.html  README.md  characters.csv  index.html  main.py  mkdocs-guide.txt  mkdocs.yml  objects.inv  pyproject.toml
docs/: index.md
search/: search_index.json
src/: api_db_class.py  api_db_dict.py  models.py  models_dataclass.py  models_pydantic.py  postgres.py
