[tool.poetry]
name = "pythonicdataclasses"
version = "0.1.0"
description = ""
authors = ["Luciano Filho <lvgalvaofilho@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
mypy = "^1.6.1"
requests = "^2.31.0"
types-requests = "^2.31.0.10"
pydantic = "^2.4.2"
pandas = "^2.1.1"
mkdocstrings-python = "^1.7.3"
mkdocs-material = "^9.4.6"
mkdocs = "^1.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
